# relativistic-raytracing

./: .gitignore  CMakeLists.txt  README.md
src/: GUI.cpp  GUI.hpp  Graphics_Manager.cpp  Graphics_Manager.hpp  build_settings.hpp  create_gpu_program.cpp  create_gpu_program.hpp  file_to_string.cpp  file_to_string.hpp  hsv_to_rgb.cpp  hsv_to_rgb.hpp  main.cpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
